# clifter_highway

./: README.md  setup.cfg
.github/workflows/: build.yml
documentation/: actions.md  dynamics.md  install.md  multi_agent_setting.md  observation.md  rewards.md
highway_env/: interval.py  utils.py
highway_env/envs/: highway_env.py  merge_env.py  parking_env.py  roundabout_env.py  u_turn_env.py
highway_env/envs/common/: action.py  finite_mdp.py  graphics.py  observation.py
highway_env/road/: graphics.py  regulation.py  road.py
highway_env/vehicle/: dynamics.py  objects.py
highway_env/vehicle/uncertainty/: estimation.py  prediction.py
higway_env/: __init__.py
higway_env/envs/: __init__.py  exit_env.py  intersection_env.py  racetrack_env.py  summon_env.py  two_way_env.py
higway_env/road/: lane.py
higway_env/vehicle/: behavior.py  controller.py  graphics.py  kinematics.py
scripts/: sb3_highway_dqn.py  utils.py
