[metadata]
name=clifter_highway
version=1.0
author=arfy slowy
author_email=slowy.arfy@gmail.com
description=environment for simulated autonomous driving task
long_description=file:README.md
long_description_content_type=text/markdown
url=https://github.com/slowy07/clifter_highway
license=MIT
classifiers=
    Programming Language :: python
    Programming Language :: python :: 3 :: Only
    Programming Language :: python :: 3.6
    Programming Language :: python :: 3.7
    Programming Language :: python :: 3.8
    Programming Language :: python :: 3.9
    License:: OSI Approved :: MIT License


[options]
setup_requires=
    pytest-runner
install_requires=
    gym
    numpy
    pygame
    matplotlib
    pandas
packages=find:
test_require=
    pytest

[options.extras_require]
deploy=pytest-runner; sphinx<1.7.3; sphinx_rtd_theme

[options.packages.find]
exclude=
    test
    docs
    scripts

[aliases]
test=pytest
    